# icedit

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: buffer.rs  cursor.rs  editor.rs  keys.rs  lib.rs  messages.rs  selection.rs  shortcuts.rs  text_utils.rs
examples/: basic_usage.rs  iced_editor.rs  test_line_selection.rs  test_selection_fixes.rs  test_selection_sync.rs
src/: editor.rs  lib.rs  selection.rs  shortcuts.rs
ui/: Cargo.toml  README.md
ui/src/: lib.rs  renderer.rs  shortcuts.rs  utils.rs  viewport.rs  widget.rs
