[package]
name = "icedit-ui"
version = "0.1.0"
edition = "2021"
description = "UI components and shortcut management for the IcEdit text editor"

[dependencies]
icedit-core = { path = "../core" }
iced = { version = "0.13", features = ["canvas", "advanced"] }

[dev-dependencies]
tokio = { workspace = true }
