[package]
name = "icedit-ui"
version = "0.1.0"
edition = "2021"
description = "UI components and shortcut management for the IcEdit text editor"

[dependencies]
icedit-core = { path = "../core" }
iced = { features = [
  "canvas",
  "advanced",
], git = "https://github.com/iced-rs/iced.git", branch = "master" }

[dev-dependencies]
tokio = { workspace = true }
